# ML4NLP

./: .gitignore  README.md  env_simple.yml  pyproject.toml
.github/workflows/: test.yml
data/bins/: omol_joint_bins_10_10_2048.npz
indices/: omol_val_indices_10.npy  omol_val_indices_1000.npy  omol_val_indices_1024.npy
mmlm/: custom_tokenizer.py  load_checkpoint.py  md_main.py  simple_md.py  train.py
mmlm/configs/: base.yaml
mmlm/configs/data/: omol_4M.yaml
mmlm/configs/md/: 5M_final.yaml  90M_final.yaml
mmlm/configs/models/: causal_model.yaml  llama_13B_ch.yaml  llama_163M_ch.yaml  llama_196M_ch.yaml  llama_1B_ch.yaml  llama_250M_ch.yaml  llama_28M_ch.yaml  llama_306M_ch.yaml  llama_3B_ch.yaml  llama_44M_ch.yaml  llama_500M.yaml  llama_500M_ch.yaml  llama_500k_ch.yaml  llama_57M_ch.yaml  llama_5M_ch.yaml  llama_7B.yaml  llama_833M_ch.yaml  llama_90M_ch.yaml  qwen3_1B.yaml  qwen3_306M.yaml  qwen3_57M.yaml  qwen3_600M.yaml
mmlm/configs/omol_ft/: 1B_final.yaml  28M_final.yaml  306M_final.yaml  5M_final.yaml  90M_final.yaml
mmlm/datasets_v2/: __init__.py  builder.py  config.py  dataset.py  lmdb_dataset.py
mmlm/indices/: omol_val_indices_10000.npy
mmlm/md/: AtomStore.py  Potential.py  measurements.py  propagator.py  util.py
mmlm/models/: continuous_config.py  continuous_model.py  dir_readout_model.py  gradient_model.py  pos_readout_model.py  prefix_model.py
mmlm/trainers/: molecule_trainer.py
mmlm/utils/: collators.py  compute_metrics_utils.py  model_utils.py  utils.py
tests/datasets_v2/: __init__.py  conftest.py  test_dataset_and_loader.py
(+19 files in other folders)
